collegamento java node js, jackpot comune, utenti comuni, bonus giornaliero terminale, vari fix